# Korevlabs-3d

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: Dockerfile  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  PhysicsLab.tsx  SpatialScene.tsx  api.ts  impact.test.ts  impact.ts  physics.test.ts  physics.ts  styles.css  textileModel.test.ts  textileModel.ts  textileSolver.ts  types.ts
docs/: ARCHITECTURE.md  NONLINEAR_TEXTILE_MODEL.md  PHYSICS.md  ROADMAP.md  THREAT_MODEL.md  USER_GUIDE.md
docs/adr/: 0001-autonomous-application.md  0002-spatial-knowledge-ir.md  0003-preview-before-apply.md
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  ingestion.py  main.py  models.py  store.py
services/api/tests/: test_api.py  test_ingestion.py  test_sources_api.py
services/image-to-3d/: Dockerfile  README.md  pyproject.toml
services/image-to-3d/app/: main.py  models.py  providers.py
